--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "@angular/platform-browser": "~13.0.2",
     "@angular/platform-browser-dynamic": "~13.0.2",
     "@angular/router": "~13.0.2",
+    "@ng-bootstrap/ng-bootstrap": "^12.0.0-beta.4",
     "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.7.2",
+    "lodash": "^4.17.21",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
